Added tests and .jshintrc file

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,4 +1,9 @@
 {
     "globalstrict": true,
-    "node": true
+    "node": true,
+
+    "globals": {
+        "describe": false,
+        "it": false
+    }
 }
