simplify package.json
and add "files" field to ensure the package doesn't include junk

--- a/package.json
+++ b/package.json
@@ -2,14 +2,10 @@
   "name": "uppercamelcase",
   "version": "1.0.0",
   "description": "Convert a dash/dot/underscore/space separated string to UpperCamelCase",
-  "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha test"
+    "test": "mocha test"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SamVerschueren/uppercamelcase.git"
-  },
+  "repository": "SamVerschueren/uppercamelcase",
   "keywords": [
     "camelcase",
     "uppercamelcase",
@@ -22,10 +18,9 @@
     "email": "sam.verschueren@gmail.com"
   },
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/SamVerschueren/uppercamelcase/issues"
-  },
-  "homepage": "https://github.com/SamVerschueren/uppercamelcase",
+  "files": [
+    "index.js"
+  ],
   "dependencies": {
     "camelcase": "^1.0.2"
   },
