switch to GitHub actions

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "email": "sam.verschueren@gmail.com"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=16"
   },
   "scripts": {
     "test": "xo && ava"
@@ -28,7 +28,7 @@
     "camelcase": "^4.1.0"
   },
   "devDependencies": {
-    "ava": "*",
-    "xo": "*"
+    "ava": "^6.1.3",
+    "xo": "0.39.1"
   }
 }
